# retroarch-shortcuts

./: .gitignore  Cargo.toml  build.rs  config.json  readme.md
.github/workflows/: windows-release.yaml
assets/: game.proto
src/: console.rs  create_config.rs  database.rs  globals.rs  io.rs  logic.rs  main.rs  media.rs
