[package]
name = "retroarch-shortcuts"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.4.0"
flate2 = "1.0.28"
inquire = "0.7.4"
mslnk = "0.1.8"
protobuf = "2.27.1"
serde = { version= "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
[build-dependencies]
protobuf-codegen-pure = "2.28.0"

